--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -25,11 +25,14 @@ background_opacity: 1
 font:
   size: 12.5
   normal:
-    family: Fira Code
+    family: Hack Nerd Font Mono
+    style: Regular
   bold:
-    family: Fira Code
+    family: Hack Nerd Font Mono
+    style: Regular
   italic:
-    family: Fira Code
+    family: Hack Nerd Font Mono
+    style: Regular
 
 key_bindings:
   - { key: Q, mods: Control, chars: "\x11" } # 暫定対応 masterブランチでは解決済みらしい
