--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -23,5 +23,4 @@
 [init]
 	defaultBranch = main
 [credential "https://github.com"]
-	helper =
-	helper = !/usr/local/bin/gh auth git-credential
+	helper = !gh auth git-credential
