--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@
 
 
 # -- general -------------------------------------------------------------------
+set-option -g default-shell /bin/zsh
 set -g set-clipboard on
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
